@@ -1,5 +1,7 @@
 2004-11-04  Vincent Noel  <vnoel@cox.net>
 
+	* userprefs.c: Renamed the file from userprefsdialog.c
+
 	* logrtns.c: Remove the ifdef'ed functions, which have not been
 	compiled or used in 2 years.
 
